Navbar mejorado y agregado clases de color, asi como los inputs en los navbar, tambien los iconos en los input. Falta hacer lo mismo para los input material en el navbar

--- a/Css/Sass/transitions.sass
+++ b/Css/Sass/transitions.sass
@@ -261,7 +261,7 @@
     100% 
         transform: scale(1)
 
-@-webkit-keyframes
+@-webkit-keyframes charging1
     0% 
         left: -100% 
         width: 100%
@@ -271,7 +271,7 @@
         transform: scaleX(0.5)
         left: 100%
         width: 100% 
-@-moz-keyframes 
+@-moz-keyframes charging1
     0% 
         left: -100% 
         width: 100%
