--- a/Css/Sass/menubar.sass
+++ b/Css/Sass/menubar.sass
@@ -25,6 +25,227 @@ div.cr.menubar
         -o-transition: background 0.3s ease-out 
         transition: background 0.3s ease-out 
         &:active
-            background: lighten($gray, 20)
+            background: lighten($gray, 10)
+    a.menu-item.right
+        float: right
+    div.brand
+        position: relative
+        box-sizing: border-box
+        height: 100% 
+        padding: 15px 15px 
+        margin: 0
+        float: left
+        overflow: hidden
+        -webkit-touch-callout: none
+        -webkit-user-select: none
+        -moz-user-select: none
+        -ms-user-select: none
+        user-select: none
+        display: inline-block
+        font-weight: bold
+        cursor: default !important 
+        font-size: 16px 
+        i 
+            display: inline-block
+            position: relative
+            float: right
+            height: 100%
+    div.nav-input
+        position: relative
+        box-sizing: border-box
+        float: left 
+        margin-left: 4px
+        padding-top: 6px
+        input  
+            position: relative
+            border: none 
+            background: rgba($gray, .4)
+            color: $white
+            font-size: 16px
+            height: 32px
+            width: 300px
+            text-indent: 5px
+            padding-right: 28px
+            &::placeholder
+                color: rgba($white, .3)
+        input.rounded 
+            border-radius: 50px
+    
+        i 
+            position: absolute 
+            right: 0 
+            top: 0 
+            width: 1.271em
+            line-height: 2
+            height: auto  
+            cursor: pointer
+            margin: 0 
+            text-align: center 
+            &:hover 
+                animation: shake 0.82s 1s ease-out
+
+div.cr.menubar.blue 
+    background: $blue 
+    div.brand 
+        color: $white 
+    a 
+        color: $white
+        &:active 
+            background: darken($blue, 10)
+    input 
+        background: rgba($white, .2) !important 
+        color: $white 
+     
+    i 
+        color: $white 
+
+div.cr.menubar.red 
+    background: $red 
+    div.brand 
+        color: $white 
+    a 
+        color: $white 
+        &:active 
+            background: darken($red, 10)
+    input 
+        background: rgba($white, .2) !important 
+        color: $white 
+     
+    i 
+        color: $white 
+
+div.cr.menubar.green 
+    background: $green 
+    div.brand 
+        color: $white
+    a 
+        color: $white 
+        &:active 
+            background: darken($green, 10)
+    input 
+        background: rgba($white, .2) !important 
+        color: $white 
+     
+    i 
+        color: $white 
+
+div.cr.menubar.yellow
+    background: $yellow 
+    div.brand 
+        color: $black
+    a 
+        color: $black 
+        &:active 
+            background: darken($yellow, 15)
+    input 
+        background: rgba($white, .2) !important 
+        color: $black 
+     
+    i 
+        color: $black 
+
+div.cr.menubar.amber 
+    background: $amber 
+    div.brand 
+        color: $white
+    a 
+        color: $white 
+        &:active 
+            background: darken($amber, 10)
+    input 
+        background: rgba($white, .2) !important 
+        color: $white 
+     
+    i 
+        color: $white 
+
+div.cr.menubar.indigo 
+    background: $indigo
+    div.brand 
+        color: $white 
+    a 
+        color: $white 
+        &:active 
+            background: darken($indigo, 10)
+    input 
+        background: rgba($white, .2) !important 
+        color: $white 
+     
+    i 
+        color: $white 
+
+div.cr.menubar.gold 
+    background: $gold
+    div.brand 
+        color: $white
+    a 
+        color: $white 
+        &:active 
+            background: darken($gold, 10)
+    input 
+        background: rgba($white, .2) !important 
+        color: $white 
+     
+    i 
+        color: $white 
+
+div.cr.menubar.purple 
+    background: $purple 
+    div.brand 
+        color: $white
+    a 
+        color: $white 
+        &:active 
+            background: darken($purple, 8)
+    input 
+        background: rgba($white, .2) !important 
+        color: $white 
+     
+    i 
+        color: $white 
+
+div.cr.menubar.black 
+    background: lighten($black, 10) 
+    div.brand 
+        color: $white
+    a 
+        color: $white 
+        &:active 
+            background: darken($black, 10)
+    input 
+        color: $white 
+    i 
+        color: $white 
+
+div.cr.menubar.white 
+    background: darken($white, 3) 
+    div.brand 
+        color: $black
+    a 
+        color: $black 
+        &:active 
+            background: darken($white, 8)
+    input 
+        background: rgba($gray, .1) !important 
+        color: $black !important 
+        &::placeholder 
+            color: $black !important 
+    i 
+        color: $black 
+
+div.cr.menubar.pink 
+    background: $pink
+    div.brand 
+        color: $white
+    a 
+        color: $white 
+        &:active 
+            background: darken($pink, 10)
+    input 
+        background: rgba($white, .2) !important 
+        color: $white 
+    i 
+        color: $white 
+
 
 
