Los menubar tienen ya configurado sus clases de color y son responsivos al momento de disminuir la pantalla a cierto punto, falta posicionar perfectamente en el centro los textos en el modo responsive y poder hacer que funcione el boton hamburgesa que anime y despliege el menubar

--- a/Css/Sass/buttons.sass
+++ b/Css/Sass/buttons.sass
@@ -563,7 +563,7 @@ button.cr.button.float.white
 button.dark-bg
 	box-shadow: none !important
 
-div.cr.button.pulse, button.cr.button.pulse
+div.cr.button.pulse, button.cr.button.pulse, a.menu-item.pulse
 	overflow: hidden
 
 .ripple
