MenuBar terminada, solo falta agregar unas cuantas funciones con jquery y corregir un error que hace que no se posicione  donde debe ir al momento de pasar de navbar responsive a navbar normal

--- a/Css/Sass/menubar.sass
+++ b/Css/Sass/menubar.sass
@@ -2,12 +2,13 @@ div.cr.menubar
     overflow: hidden 
     position: relative 
     background: lighten($gray, 32)
-    height: 50px
+    max-height: 100px
     margin: 0 !important 
     padding: 5px 5px
     border-bottom-left-radius: 2px
     border-bottom-right-radius: 2px 
     box-shadow: 0 2px 1px rgba($gray, .5)
+    transition: max-height 1s ease-out 
 
     a.menu-item
         position: relative
@@ -47,6 +48,20 @@ div.cr.menubar
 
     a.menu-item.right
         float: right
+
+    div.menu-icon 
+        display: none 
+        position: absolute
+        top: 0
+        padding: 10px 10px 10px 10px
+        transition: transform 0.3s ease-out 
+        
+    div.menu-icon.right 
+        right: 0 
+
+    div.menu-icon.left 
+        left: 0 
+        
     div.brand
         position: relative
         box-sizing: border-box
@@ -116,9 +131,8 @@ div.cr.menubar
 
 
 
-div.cr.menubar.mobile-top 
+div.cr.menubar.mobile-top
     @media screen and (max-width: 968px)
-        height: auto !important
         a
             &:nth-child(2)
                 width: 100% !important
@@ -126,28 +140,46 @@ div.cr.menubar.mobile-top
         a.menu-item 
             position: relative
             float: none 
-            display: block 
+            display: none 
             width: 100% 
             text-align: center
+        div.menu-icon 
+            display: block
+            i
+                cursor: pointer
+                right: 0 
+                text-align: center  
+                padding: 5px 5px 
+                font-size: 24px
+                transition: transform 0.5s ease-out 
+                
+
         div.nav-input 
-            display: block 
-            position: relative
-            left: 35%  
+            display: none 
+            position: relative 
+            float: none 
+            box-sizing: border-box
+            width: 95%
+            left: 5px
+            input 
+                width: 95% !important 
+            
+        
         div.brand 
             position: relative !important 
             height: auto !important 
             left: 45%
             float: none !important 
-            display: block !important
+            display: block  
 
-        &:after 
-            content: 'menu'
-            font-family: 'material icons'
-            position: absolute
-            right: 2%
-            top: 20px
-            cursor: pointer
-            font-size: 24px
+div.cr.menubar.mobile-top.trigger
+    max-height: 1000px !important
+    a 
+        display: block 
+    div.nav-input 
+        display: block 
+    div.menu-icon
+        transform: rotate(-360deg)
         
 div.cr.menubar.mobile-top.hide 
     a.menu-item 
