Menubar terminadas, falta crear el responsive al lado derecho o izquierdo a lo material design, example page creado

--- a/Css/Sass/cards.sass
+++ b/Css/Sass/cards.sass
@@ -1,7 +1,7 @@
 @import 'variables'
 div.cr.card
 	position: relative 
-	box-shadow: 0 2px 4px 0 rgba($black, .2)
+	box-shadow: 0 2px 4px 0 rgba($black, .3)
 	-webkit-transition: box-shadow 0.3s
 	-moz-transition: box-shadow 0.3s
 	-o-transition: box-shadow 0.3s
@@ -26,6 +26,7 @@ div.cr.card
 		height: auto
 		font-weight: bold
 		position: relative 
+		background: $white 
 		color: lighten($black, 30)
 		padding: 10px 5px
 
@@ -154,6 +155,7 @@ div.cr.card
 	.card-footer
 		position: relative
 		box-sizing: border-box
+		background: $white
 		width: 100% 
 		height: auto
 		padding: 10px 5px 10px 5px 
