--- a/Css/Sass/buttons.sass
+++ b/Css/Sass/buttons.sass
@@ -40,7 +40,8 @@ div.cr.button
 
 	line-height: 2.2rem
 	padding-right: 20px
-	display: table
+	display: table 
+	width: 35px
 
 	padding-left: 20px
 	cursor: pointer
@@ -469,7 +470,7 @@ button.cr.button.float
 	-moz-transition:  background-color 0.3s, box-shadow 0.3s 
 	-webkit-transition: background-color 0.3s, box-shadow 0.3s 
 	transition: background-color 0.3s, box-shadow 0.3s 
-	box-shadow: 0 4px 8px $gray
+	box-shadow: 0 4px 8px rgba($black, .2)
 	bottom: 4%
 	i
 		text-align: center
@@ -487,7 +488,7 @@ button.cr.button.float
 
 	&:active 
 		background-color: darken($accent, 10)
-		box-shadow: 0 6px 12px $gray
+		box-shadow: 0 6px 12px rgba($black, .4)
 
 button.cr.button.float.blue 
 	background-color: $blue 
@@ -559,6 +560,11 @@ button.cr.button.float.white
 	&:active 
 		background-color: darken($white, 10) 
 
+
+
+
+button.float.square 
+	border-radius: 4px !important 
 
 button.dark-bg
 	box-shadow: none !important
