--- a/Css/Sass/layout.sass
+++ b/Css/Sass/layout.sass
@@ -16,6 +16,7 @@ body
 	margin-left: auto
 	padding-right: 15px
 	padding-left: 15px
+	box-sizing: border-box
 
 	@media screen and (max-width: 767px)
 		width: auto
