--- a/Css/main.css
+++ b/Css/main.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
 div.cr.card {
   position: relative;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.3);
   -webkit-transition: box-shadow 0.3s;
   -moz-transition: box-shadow 0.3s;
   -o-transition: box-shadow 0.3s;
@@ -25,6 +25,7 @@ div.cr.card {
     height: auto;
     font-weight: bold;
     position: relative;
+    background: #fff;
     color: #4d4d4d;
     padding: 10px 5px; }
   div.cr.card .card-head.pink {
@@ -126,6 +127,7 @@ div.cr.card {
   div.cr.card .card-footer {
     position: relative;
     box-sizing: border-box;
+    background: #fff;
     width: 100%;
     height: auto;
     padding: 10px 5px 10px 5px;
@@ -2329,8 +2331,9 @@ div.cr.menubar {
   margin: 0 !important;
   padding: 5px 5px;
   border-bottom-left-radius: 2px;
+  white-space: nowrap;
   border-bottom-right-radius: 2px;
-  box-shadow: 0 2px 1px rgba(158, 158, 158, 0.5);
+  box-shadow: 0 2px 1px rgba(0, 0, 0, 0.4);
   transition: max-height 1s ease-out; }
   div.cr.menubar a.menu-item {
     position: relative;
@@ -2435,39 +2438,54 @@ div.cr.menubar {
         animation: shake 0.82s 1s ease-out; }
 
 @media screen and (max-width: 968px) {
-  div.cr.menubar.mobile-top a:nth-child(2) {
-    width: 100% !important;
-    display: block; }
-  div.cr.menubar.mobile-top a.menu-item {
-    position: relative;
-    float: none;
-    display: none;
-    width: 100%;
-    text-align: center; }
-  div.cr.menubar.mobile-top div.menu-icon {
-    display: block; }
-    div.cr.menubar.mobile-top div.menu-icon i {
-      cursor: pointer;
-      right: 0;
-      text-align: center;
-      padding: 5px 5px;
-      font-size: 24px;
-      transition: transform 0.5s ease-out; }
-  div.cr.menubar.mobile-top div.nav-input {
-    display: none;
-    position: relative;
-    float: none;
-    box-sizing: border-box;
-    width: 95%;
-    left: 5px; }
-    div.cr.menubar.mobile-top div.nav-input input {
-      width: 95% !important; }
+  div.cr.menubar.mobile-top {
+    white-space: nowrap; }
+    div.cr.menubar.mobile-top a:nth-child(2) {
+      width: 100% !important;
+      display: block; }
+    div.cr.menubar.mobile-top a.menu-item {
+      position: relative;
+      float: none;
+      display: none;
+      width: 100%;
+      text-align: center; }
+    div.cr.menubar.mobile-top div.menu-icon {
+      display: block; }
+      div.cr.menubar.mobile-top div.menu-icon i {
+        cursor: pointer;
+        right: 0;
+        text-align: center;
+        padding: 5px 5px;
+        font-size: 24px;
+        transition: transform 0.5s ease-out; }
+    div.cr.menubar.mobile-top div.nav-input {
+      display: none;
+      position: relative;
+      float: none;
+      box-sizing: border-box;
+      width: 97%;
+      left: 5px; }
+      div.cr.menubar.mobile-top div.nav-input input {
+        width: 97% !important; }
+    div.cr.menubar.mobile-top div.brand {
+      position: relative !important;
+      height: auto !important;
+      left: 45%;
+      float: none !important;
+      display: block; } }
+@media screen and (max-width: 460px) {
   div.cr.menubar.mobile-top div.brand {
-    position: relative !important;
-    height: auto !important;
-    left: 45%;
-    float: none !important;
-    display: block; } }
+    margin-left: -5%; } }
+@media screen and (max-width: 840px) {
+  div.cr.menubar.mobile-top div.nav-input {
+    width: 93%; }
+    div.cr.menubar.mobile-top div.nav-input input {
+      width: 93%; } }
+@media screen and (max-width: 443px) {
+  div.cr.menubar.mobile-top div.nav-input {
+    width: 90%; }
+    div.cr.menubar.mobile-top div.nav-input input {
+      width: 90%; } }
 
 div.cr.menubar.mobile-top.trigger {
   max-height: 1000px !important; }
@@ -3569,7 +3587,8 @@ body {
   margin-right: auto;
   margin-left: auto;
   padding-right: 15px;
-  padding-left: 15px; }
+  padding-left: 15px;
+  box-sizing: border-box; }
   @media screen and (max-width: 767px) {
     .cr.container {
       width: auto;
@@ -3628,6 +3647,7 @@ div.cr.button {
   line-height: 2.2rem;
   padding-right: 20px;
   display: table;
+  width: 35px;
   padding-left: 20px;
   cursor: pointer;
   height: 2.2rem; }
@@ -4045,7 +4065,7 @@ button.cr.button.float {
   -moz-transition: background-color 0.3s, box-shadow 0.3s;
   -webkit-transition: background-color 0.3s, box-shadow 0.3s;
   transition: background-color 0.3s, box-shadow 0.3s;
-  box-shadow: 0 4px 8px #9E9E9E;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   bottom: 4%; }
   button.cr.button.float i {
     text-align: center;
@@ -4062,7 +4082,7 @@ button.cr.button.float {
     transform: translate(-50%, -50%); }
   button.cr.button.float:active {
     background-color: #c1134e;
-    box-shadow: 0 6px 12px #9E9E9E; }
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4); }
 
 button.cr.button.float.blue {
   background-color: #2196F3; }
@@ -4127,6 +4147,9 @@ button.cr.button.float.white {
   color: #000; }
   button.cr.button.float.white:active {
     background-color: #e6e6e6; }
+
+button.float.square {
+  border-radius: 4px !important; }
 
 button.dark-bg {
   box-shadow: none !important; }
