Actualizado el index para ser una demo responsive

--- a/Css/Sass/buttons.sass
+++ b/Css/Sass/buttons.sass
@@ -67,7 +67,7 @@ div.cr.button
 	border-radius: 0 !important
 
 .cr.button.rounded 
-	border-radius: $button-radius
+	border-radius: 50px !important 
 	
 .cr.button
 	-ms-transition: background 0.3s ease-out, box-shadow 0.3s ease-out !important 
