--- a/Css/Sass/cards.sass
+++ b/Css/Sass/cards.sass
@@ -14,7 +14,7 @@ div.cr.card
 	font-size: 16px
 	z-index: 1
 	&:hover 
-		box-shadow: 0  4px 10px 0 rgba($black, .2)
+		box-shadow: 0  4px 10px 0 rgba($black, .4) 
 
 	.card-head
 		text-align: center
@@ -112,6 +112,7 @@ div.cr.card
 		padding: 15px 15px 15px 15px
 		font-size: 16px
 		background: $white
+
 	
 
 
@@ -223,9 +224,15 @@ div.cr.card.medium
 	width: 35rem
 
 div.cr.card.adaptive 
-	width: 100%
+	width: 100% 
+	// @media screen and (min-width: 1200px)
+	// 	margin-left: 2%
+
+
+
 @media screen and (max-width: 767px)
 	width: auto !important 
+
 
 div.cr.card.dark-bg
 	.card-head
@@ -445,6 +452,9 @@ div.cr.card.variant
 		border-top-left-radius: none 
 		border-bottom-left-radius: 4px
 		border-bottom-right-radius: 4px
+
+div.cr.card.full-shadow
+	box-shadow: 0 8px 16px rgba($black, .3), 0 8px 26px rgba($black, .3), 0 8px 26px rgba($black, .3)  
 
 
 
