Corregido el tamaño y posicionamiento de los modals

--- a/Css/Sass/cards.sass
+++ b/Css/Sass/cards.sass
@@ -454,7 +454,9 @@ div.cr.card.variant
 		border-bottom-right-radius: 4px
 
 div.cr.card.full-shadow
-	box-shadow: 0 8px 16px rgba($black, .3), 0 8px 26px rgba($black, .3), 0 8px 26px rgba($black, .3)  
+	box-shadow: 0 10px 26px rgba($black, .5) 
+	&:hover 
+		box-shadow: 0 10px 30px rgba($black, .5)
 
 
 
