--- a/Css/Sass/inputs.sass
+++ b/Css/Sass/inputs.sass
@@ -581,13 +581,17 @@ span.m-state[data-positive].done
         font-size: 12px
 
 span.m-counter[max-value]
+    box-sizing: inherit
+    float: right 
     &:before 
         content: attr(max-value)
         width: 30px 
         height: 20px 
+        float: right
         position: absolute
-        text-align: right
-        right: 1% 
+        bottom: -12%
+        right: 5px 
+        box-sizing: inherit 
         color: $black 
         display: none 
         visibility: hidden 
