--- a/Css/Sass/layout.sass
+++ b/Css/Sass/layout.sass
@@ -27,11 +27,10 @@ body
 		max-width: 90% !important 
 
 	@media screen and (max-width: 1199px) and (min-width: 992px)
-		width: 970px
+		width: 100%
 		margin-left: 25px
 		max-width: 90% !important 
 
 	@media screen and (min-width: 1200px)
-		width: 1170px
+		width: 100%
 		margin-left: 35px
-		max-width: 90% !important 
