--- a/Css/Sass/modals.sass
+++ b/Css/Sass/modals.sass
@@ -2,10 +2,11 @@ div.cr.modal
     position: fixed  
     border-radius: 4px 
     width: 500px
+    transform: translate(-50%, -50%)
     min-height: 200px
-    top: 30% 
+    max-height: calc(100% - 100px)
+    top: 50% 
     left: 50% 
-    margin-top: -50px
     display: none 
     z-index: 200 
     overflow: hidden 
@@ -16,22 +17,49 @@ div.cr.modal
     box-shadow: 1px 1px 1px 1px rgba($gray, .3), -1px 1px 1px 1px rgba($gray, .3)
     background: darken($white, 1)
     color: lighten($black, 30)
-    @media screen and (max-width: 767px)
-        width: auto 
-        margin-left: -47.5%
-        max-width: 95% !important
 
-    @media screen and (min-width: 768px)
-        width: 500px
-        margin-left: -30%
+    @media screen and (max-width: 794px)
+        width: 300px !important
 
-    @media screen and (max-width: 1199px) and (min-width: 992px)
-        width: 500px
-        margin-left: -20%
+    // @media screen and (max-width: 962px)
+    //     width: 500px
+    //     margin-left: -30%
 
-    @media screen and (min-width: 1200px)
-        width: 500px 
-        margin-left: -20%
+    // @media screen and (min-width: 962px) and (max-width: 1200px)
+    //     width: 500px
+    //     margin-left: -20%
+
+    // @media screen and (min-width: 1200px)
+    //     width: 500px
+    //     margin-left: -15%
+
+    // @media screen and (max-width: 629px)
+    //     margin-left: -29%
+    //     width: auto 
+    //     max-width: 95% !important
+
+    // @media screen and (max-width: 768px)
+    //     width: 500px 
+    //     background: $blue 
+    //     margin-left: -35%
+
+    // @media screen and (max-width: 892px)
+    //     width: 500px 
+    //     margin-left: -30% !important  
+
+    // @media screen and (min-width: 945px) and (max-width: 893px)
+    //     width: 500px
+    //     margin-left: -30% !important
+
+    // @media screen and (max-width: 1199px) 
+    //     width: 500px
+    //     margin-left: -22% !important 
+
+    // @media screen and (min-width: 1200px)
+    //     width: 500px 
+    //     margin-left: -15% !important 
+
+
 
     .center 
         text-align: center 
@@ -198,7 +226,7 @@ div.cr.modal.opened
     -webkit-animation: appear 0.4s ease-in-out !important 
     -moz-animation: appear 0.4s ease-in-out !important 
     -o-animation: appear 0.4s ease-in-out !important 
-    animation: appear 0.4s ease-in-out !important 
+    animation: appear 0.4s
     display: block 
 
 div.cr.modal.shadow
@@ -227,73 +255,17 @@ span.overlay.hide
 div.cr.modal.small
     width: 350px 
     margin-top: -80px
-    @media screen and (max-width: 550px)
-        margin-left: -46% !important
-        width: auto 
-        max-width: 95% !important
-
-    @media screen and (max-width: 767px)
-        margin-left: -25%
-        max-width: 95% !important
-
-    @media screen and (min-width: 768px)
-        margin-left: -19%
-
-    @media screen and (max-width: 1199px) and (min-width: 992px)
-        margin-left: -15%
-
-    @media screen and (min-width: 1200px)
-        margin-left: -14%
 
 div.cr.modal.medium 
     width: 600px 
-    margin-top: -80px
-    @media screen and (max-width: 680px)
-        margin-left: -46% !important
-        width: 100% 
-        max-width: 95% !important
 
-    @media screen and (max-width: 767px)
-        margin-left: -40%
-        max-width: 95% !important
-
-    @media screen and (min-width: 768px)
-        margin-left: -35%
-
-    @media screen and (max-width: 1199px) and (min-width: 992px)
-        margin-left: -30%
-
-    @media screen and (min-width: 1200px)
-        margin-left: -22%
 
 div.cr.modal.big 
     width: 800px 
     margin-top: -80px 
-    @media screen and (max-width: 680px)
-        margin-left: -46% !important
-        width: 100% 
-        max-width: 95% !important
-
-    @media screen and (max-width: 767px)
-        margin-left: -47%
-        max-width: 95% !important
-
-    @media screen and (min-width: 768px) and (max-width: 850px)
-        margin-left: -47%
-        max-width: 95% !important 
-
-    @media screen and (min-width: 851px) and (max-width: 991px)
-        margin-left: -44%
-
-    @media screen and (max-width: 1199px) and (min-width: 992px)
-        margin-left: -37.6%
-        max-width: 95% !important 
-
-    @media screen and (min-width: 1200px)
-        margin-left: -30%
 
 div.cr.modal.content-scroll
-    margin-top: -150px 
+    // margin-top: -150px 
     div.modal-body 
         max-height: 500px !important 
         overflow-y: auto 
