--- a/Css/main.css
+++ b/Css/main.css
@@ -400,7 +400,9 @@ div.cr.card.variant {
     border-bottom-right-radius: 4px; }
 
 div.cr.card.full-shadow {
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3), 0 8px 26px rgba(0, 0, 0, 0.3), 0 8px 26px rgba(0, 0, 0, 0.3); }
+  box-shadow: 0 10px 26px rgba(0, 0, 0, 0.5); }
+  div.cr.card.full-shadow:hover {
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); }
 
 .bold {
   font-weight: bold; }
@@ -878,18 +880,23 @@ span.m-state[data-positive].done:before {
   white-space: nowrap;
   font-size: 12px; }
 
-span.m-counter[max-value]:before {
-  content: attr(max-value);
-  width: 30px;
-  height: 20px;
-  position: absolute;
-  text-align: right;
-  right: 1%;
-  color: #000;
-  display: none;
-  visibility: hidden;
-  white-space: nowrap;
-  font-size: 12px; }
+span.m-counter[max-value] {
+  box-sizing: inherit;
+  float: right; }
+  span.m-counter[max-value]:before {
+    content: attr(max-value);
+    width: 30px;
+    height: 20px;
+    float: right;
+    position: absolute;
+    bottom: -12%;
+    right: 5px;
+    box-sizing: inherit;
+    color: #000;
+    display: none;
+    visibility: hidden;
+    white-space: nowrap;
+    font-size: 12px; }
 
 span.m-state.error.show:before {
   display: inline-block;
@@ -1559,10 +1566,11 @@ div.cr.modal {
   position: fixed;
   border-radius: 4px;
   width: 500px;
+  transform: translate(-50%, -50%);
   min-height: 200px;
-  top: 30%;
+  max-height: calc(100% - 100px);
+  top: 50%;
   left: 50%;
-  margin-top: -50px;
   display: none;
   z-index: 200;
   overflow: hidden;
@@ -1573,23 +1581,9 @@ div.cr.modal {
   box-shadow: 1px 1px 1px 1px rgba(158, 158, 158, 0.3), -1px 1px 1px 1px rgba(158, 158, 158, 0.3);
   background: #fcfcfc;
   color: #4d4d4d; }
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 794px) {
     div.cr.modal {
-      width: auto;
-      margin-left: -47.5%;
-      max-width: 95% !important; } }
-  @media screen and (min-width: 768px) {
-    div.cr.modal {
-      width: 500px;
-      margin-left: -30%; } }
-  @media screen and (max-width: 1199px) and (min-width: 992px) {
-    div.cr.modal {
-      width: 500px;
-      margin-left: -20%; } }
-  @media screen and (min-width: 1200px) {
-    div.cr.modal {
-      width: 500px;
-      margin-left: -20%; } }
+      width: 300px !important; } }
   div.cr.modal .center {
     text-align: center; }
   div.cr.modal i.close {
@@ -1748,7 +1742,7 @@ div.cr.modal.opened {
   -webkit-animation: appear 0.4s ease-in-out !important;
   -moz-animation: appear 0.4s ease-in-out !important;
   -o-animation: appear 0.4s ease-in-out !important;
-  animation: appear 0.4s ease-in-out !important;
+  animation: appear 0.4s;
   display: block; }
 
 div.cr.modal.shadow {
@@ -1776,79 +1770,17 @@ span.overlay.hide {
 div.cr.modal.small {
   width: 350px;
   margin-top: -80px; }
-  @media screen and (max-width: 550px) {
-    div.cr.modal.small {
-      margin-left: -46% !important;
-      width: auto;
-      max-width: 95% !important; } }
-  @media screen and (max-width: 767px) {
-    div.cr.modal.small {
-      margin-left: -25%;
-      max-width: 95% !important; } }
-  @media screen and (min-width: 768px) {
-    div.cr.modal.small {
-      margin-left: -19%; } }
-  @media screen and (max-width: 1199px) and (min-width: 992px) {
-    div.cr.modal.small {
-      margin-left: -15%; } }
-  @media screen and (min-width: 1200px) {
-    div.cr.modal.small {
-      margin-left: -14%; } }
 
 div.cr.modal.medium {
-  width: 600px;
-  margin-top: -80px; }
-  @media screen and (max-width: 680px) {
-    div.cr.modal.medium {
-      margin-left: -46% !important;
-      width: 100%;
-      max-width: 95% !important; } }
-  @media screen and (max-width: 767px) {
-    div.cr.modal.medium {
-      margin-left: -40%;
-      max-width: 95% !important; } }
-  @media screen and (min-width: 768px) {
-    div.cr.modal.medium {
-      margin-left: -35%; } }
-  @media screen and (max-width: 1199px) and (min-width: 992px) {
-    div.cr.modal.medium {
-      margin-left: -30%; } }
-  @media screen and (min-width: 1200px) {
-    div.cr.modal.medium {
-      margin-left: -22%; } }
+  width: 600px; }
 
 div.cr.modal.big {
   width: 800px;
   margin-top: -80px; }
-  @media screen and (max-width: 680px) {
-    div.cr.modal.big {
-      margin-left: -46% !important;
-      width: 100%;
-      max-width: 95% !important; } }
-  @media screen and (max-width: 767px) {
-    div.cr.modal.big {
-      margin-left: -47%;
-      max-width: 95% !important; } }
-  @media screen and (min-width: 768px) and (max-width: 850px) {
-    div.cr.modal.big {
-      margin-left: -47%;
-      max-width: 95% !important; } }
-  @media screen and (min-width: 851px) and (max-width: 991px) {
-    div.cr.modal.big {
-      margin-left: -44%; } }
-  @media screen and (max-width: 1199px) and (min-width: 992px) {
-    div.cr.modal.big {
-      margin-left: -37.6%;
-      max-width: 95% !important; } }
-  @media screen and (min-width: 1200px) {
-    div.cr.modal.big {
-      margin-left: -30%; } }
 
-div.cr.modal.content-scroll {
-  margin-top: -150px; }
-  div.cr.modal.content-scroll div.modal-body {
-    max-height: 500px !important;
-    overflow-y: auto; }
+div.cr.modal.content-scroll div.modal-body {
+  max-height: 500px !important;
+  overflow-y: auto; }
 
 div.cr.snackbar {
   visibility: hidden;
@@ -2736,14 +2668,14 @@ div.cr.menubar.pink {
 @keyframes appear {
   0% {
     display: none;
-    opacity: 0; }
-  1% {
-    display: block;
     opacity: 0;
-    transform: scale(0); }
+    transform: scale(0) !important; }
+  1% {
+    display: block; }
   100% {
-    opacity: 1 !important;
-    transform: scale(1); } }
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1) !important;
+    display: block; } }
 @-o-keyframes fadeIn {
   0% {
     opacity: 0; }
@@ -3602,14 +3534,13 @@ body {
       max-width: 90% !important; } }
   @media screen and (max-width: 1199px) and (min-width: 992px) {
     .cr.container {
-      width: 970px;
+      width: 100%;
       margin-left: 25px;
       max-width: 90% !important; } }
   @media screen and (min-width: 1200px) {
     .cr.container {
-      width: 1170px;
-      margin-left: 35px;
-      max-width: 90% !important; } }
+      width: 100%;
+      margin-left: 35px; } }
 
 /*-----------------------------------All  BUTTONS CODE---------------------------------------------------------- */
 button.cr.button {
