--- a/Css/Sass/menubar.sass
+++ b/Css/Sass/menubar.sass
@@ -9,7 +9,7 @@ div.cr.menubar
     white-space: nowrap
     border-bottom-right-radius: 2px 
     box-shadow: 0 2px 1px rgba($black, .4)
-    transition: max-height 1s ease-out 
+    // transition: max-height 1s ease-out 
 
     a.menu-item
         position: relative
