--- a/Css/Sass/layout.sass
+++ b/Css/Sass/layout.sass
@@ -9,7 +9,8 @@ body
 	margin: 0 !important 
 
 .cr.container
-	height: 100vh
+	// height: 100vh
+	position: relative
 	margin-top: 15px
 	margin-bottom: 5px
 	margin-right: auto 
@@ -23,14 +24,10 @@ body
 		max-width: 90% !important 
 
 	@media screen and (min-width: 768px)
-		width: 750px
 		max-width: 90% !important 
 
 	@media screen and (max-width: 1199px) and (min-width: 992px)
 		width: 100%
-		margin-left: 25px
-		max-width: 90% !important 
 
 	@media screen and (min-width: 1200px)
 		width: 100%
-		margin-left: 35px
